# flext-target-oracle-oic

./: .gitignore  .pre-commit-config.yaml  .token  AGENTS.md  CLAUDE.local.md  CLAUDE.md  FLEXT_CORE_MIGRATION_APPLIED.md  LOGGING_MIGRATION.md  Makefile  README.md  base.mk  config.json  config.json.example  conftest.py  custom.mk  custom.mk.rej  generate_config.py  mkdocs.yml  pyproject.toml  pyproject.toml.backup.20250619_210432  pytest.ini  {}
.flext-deps/: flext-api  flext-oracle-oic
.github/workflows/: ci.yml
.scope/: config.toml
.serena/: project.yml
docs/: INDEX.md  README.md  index.md
docs/api-reference/: README.md
docs/guides/: README.md  configuration.md  development.md  getting-started.md  security.md  skill-automation-pattern.md  testing.md  troubleshooting.md
docs/pydantic-v2-modernization/: audit_pydantic_v2.py
examples/: README.md
flx-oracle-oic/: README.md  pyproject.toml
flx-oracle-oic/.github/workflows/: ci.yml
guides/: README.md  configuration.md  development.md  getting-started.md  testing.md  troubleshooting.md
oracle-oic-ext/: README.md  pyproject.toml
oracle-oic-ext/.github/workflows/: ci.yml
scripts/: generate_config.py
src/: README.md  __init__.py  constants.py  models.py
src/flext_target_oracle_oic/: __init__.py  __init__.pyi  __main__.py  __version__.py  _config.py  _exports.py  _exports_lazy_part_01.py  _settings.py  api.py  auth.py  cli.py  client.py  config.py  constants.py  exceptions.py  models.py  protocols.py  settings.py  simple_api.py  sinks.py  sinks_extended.py  target.py  target_client.py  target_config.py  target_exceptions.py  target_models.py  typings.py  utilities.py  version.py
src/flext_target_oracle_oic/_utilities/: __init__.py  service_runtime.py
src/flext_target_oracle_oic/application/: __init__.py  orchestrator.py
src/flext_target_oracle_oic/config/: target-oracle-oic.yaml
src/flext_target_oracle_oic/connection/: __init__.py  config.py  connection.py  settings.py
src/flext_target_oracle_oic/infrastructure/: __init__.py  di_container.py
src/flext_target_oracle_oic/patterns/: __init__.py  oic_patterns.py
src/flext_target_oracle_oic/singer/: __init__.py  processors.py
src/target_oracle_oic/: __init__.py  __main__.py  __version__.py  auth.py  config.py  sinks.py  sinks_extended.py  target.py
tests/: README.md  __init__.py  base.py  conftest.py  constants.py  models.py  protocols.py  settings.py  test_cli_entrypoint.py  test_e2e.py  test_e2e_complete.py  test_exceptions.py  test_generate_config.py  test_target.py  typings.py  utilities.py
tests/unit/: __init__.py  test_cli_entrypoint.py  test_e2e.py  test_e2e_sinks.py  test_module_governance.py  test_target.py
