[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "flext-target-oracle-oic"
version = "0.7.0"
description = "FLEXT Target Oracle OIC - Singer Target for Oracle Integration Cloud"
authors = [{ name = "FLEXT Team", email = "team@flext.sh" }]
maintainers = [{ name = "FLEXT Team", email = "team@flext.sh" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    # Singer SDK and Oracle dependencies
    "singer-sdk>=0.47.0",
    "requests>=2.32.0",
    "oracledb>=2.4.1",
    "sqlalchemy>=2.0.0",
    "python-dateutil>=2.9.0",
    "jsonschema>=4.23.0",
    "tenacity>=9.0.0",
    "httpx>=0.28.0",
]
keywords = ["flext", "singer", "target", "oracle", "oic", "integration", "enterprise"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Database",
    "Topic :: System :: Systems Administration",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/flext-sh/flext"
Repository = "https://github.com/flext-sh/flext"
Documentation = "https://github.com/flext-sh/flext/blob/main/README.md"

[project.scripts]
target-oracle-oic = "flext_target_oracle_oic.target:main"
flext-target-oracle-oic = "flext_target_oracle_oic.target:main"

[tool.poetry]
name = "flext-target-oracle-oic"
version = "0.7.0"
description = "FLEXT Target Oracle OIC - Singer Target for Oracle Integration Cloud"
authors = ["FLEXT Team <team@flext.sh>"]
readme = "README.md"
packages = [{ include = "flext_target_oracle_oic", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.13,<3.14"

# Core FLEXT dependencies - primary source of truth
flext-core = { path = "../flext-core", develop = true }
flext-observability = { path = "../flext-observability", develop = true }

# Singer SDK and Oracle dependencies
singer-sdk = ">=0.47.0"
requests = ">=2.32.0"
oracledb = ">=2.4.1"
sqlalchemy = ">=2.0.0"
python-dateutil = ">=2.9.0"
jsonschema = ">=4.23.0"
tenacity = ">=9.0.0"
httpx = ">=0.28.0"

# Core dependencies are managed by flext-core - no duplication
# pydantic, pydantic-settings, click, structlog, etc.

[tool.poetry.group.dev.dependencies]
# Development dependencies
pytest = ">=8.0.0"
pytest-asyncio = ">=0.23.0"
pytest-cov = ">=4.0.0"
pytest-mock = ">=3.12.0"
pytest-xdist = ">=3.6.0"
pytest-timeout = ">=2.3.1"
pytest-sugar = ">=1.0.0"
pytest-clarity = ">=1.0.1"
pytest-benchmark = ">=4.0.0"

# Code quality
ruff = ">=0.8.0"
mypy = ">=1.13.0"
pre-commit = ">=4.0.0"
bandit = ">=1.8.0"

# Documentation
mkdocs = ">=1.6.0"
mkdocs-material = ">=9.5.0"
mkdocs-mermaid2-plugin = ">=1.1.0"

[tool.poetry.scripts]
target-oracle-oic = "flext_target_oracle_oic.target:main"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=flext_target_oracle_oic",
    "--cov-branch",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html:reports/coverage",
    "--cov-report=xml:reports/coverage.xml",
    "--cov-fail-under=90",
    "--maxfail=1",
    "--tb=short",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests",
    "smoke: Smoke tests",
    "oic: marks tests as Oracle Integration Cloud tests",
    "target: marks tests as Singer target tests",
    "oracle: marks tests as Oracle database tests",
    "requires_oic: tests that need OIC access",
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]
asyncio_mode = "auto"

# Ruff configuration - focused on src/ and tests/
[tool.ruff]
target-version = "py313"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "ALL",
]
ignore = [
    # Line length and formatting (handled by formatter)
    "E501",    # line too long
    "W505",    # doc line too long
    "W292",    # no newline at end of file
    "W293",    # blank line contains whitespace
    "COM812",  # trailing comma missing (conflicts with formatter)
    "ISC001",  # single line implicit string concatenation
    
    # Documentation style flexibility  
    "D100",    # missing docstring in public module
    "D101",    # missing docstring in public class
    "D102",    # missing docstring in public method
    "D103",    # missing docstring in public function
    "D104",    # missing docstring in public package
    "D105",    # missing docstring in magic method
    "D106",    # missing docstring in public nested class
    "D107",    # missing docstring in __init__
    "D203",    # blank line before class docstring (conflicts with D211)
    "D213",    # multi-line docstring summary second line (conflicts with D212)
    "D401",    # non-imperative-mood - Technical descriptions preferred
    
    # Oracle OIC Target-specific patterns
    "ARG001",  # unused-function-argument - Singer SDK patterns
    "ARG002",  # unused-method-argument - Singer SDK interface compliance
    "ANN001",  # missing-type-annotation - Fixtures and Singer SDK
    "ANN401",  # any-type - Singer SDK requires Any types
    "PLC0415", # import-outside-top-level - Dynamic imports for targets
    "FBT001",  # boolean-positional-argument - Singer SDK patterns
    "FBT003",  # boolean-positional-value-in-call - Config patterns
    "S106",    # hardcoded-password-possible - Test secrets
    "S107",    # hardcoded-password-string - Development defaults
    "S603",    # subprocess-without-shell-equals-true - CLI commands
    "S607",    # start-process-with-partial-path - Test scripts
    "PTH123",  # open-builtin - Path.open() not always suitable
    "I001",    # unsorted-imports - Import order flexibility
    "SLF001",  # private-member-accessed - Test introspection
    "BLE001",  # blind-except - Error recovery patterns
    "PLR2004", # magic-value-used-in-comparison - Test assertions
    
    # Code style flexibility
    "ERA001",  # commented-out-code - Development annotations
    "TD002",   # missing-todo-author
    "TD003",   # missing-issue-link-in-todo
    "FIX002",  # line-contains-todo
    "T201",    # print - CLI output
    "T203",    # pprint - Debugging
    "G004",    # logging-f-string - Better error messages
    
    # Complexity (handled case by case)
    "C901",    # function-too-complex
    "PLR0913", # too-many-arguments - Singer SDK methods
    "PLR0915", # too-many-statements
    "PLR0912", # too-many-branches
    "PLR0911", # too-many-return-statements
    
    # Import management
    "F401",    # unused-import - __init__.py re-exports
    "F403",    # star-import - __init__.py patterns
    "F405",    # star-import-usage
    
    # Error handling patterns
    "EM101",   # raw-string-in-exception
    "EM102",   # f-string-in-exception
    "TRY002",  # raise-vanilla-exception - Test helpers
    "TRY003",  # raise-vanilla-exception-with-message
    "TRY301",  # raise-within-try
    
    # Test-specific patterns
    "S101",    # assert - Tests
    "PT011",   # pytest-raises-too-broad
    "PT012",   # pytest-raises-with-multiple-statements
]

# Test-specific ignores
[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "D102", "N801", "N802", "N806", "PLR2004", "F401", "PLC0415", "G004", "T201"]
"**/tests/*.py" = ["S101", "D102", "N801", "N802", "N806", "PLR2004", "F401", "PLC0415", "G004", "T201"]
"test_*.py" = ["S101", "D102", "N801", "N802", "N806", "PLR2004", "F401", "PLC0415", "G004", "T201"]
 

# Auto-generated files - exclude from ALL linting
"**/proto/*_pb2.py" = ["ALL"]
"**/proto/*_pb2_grpc.py" = ["ALL"]
"**/*_pb2.py" = ["ALL"]
"**/*_pb2_grpc.py" = ["ALL"]
"**/generated/**/*.py" = ["ALL"]
[tool.ruff.lint.isort]
known-first-party = ["flext_target_oracle_oic", "flext_core", "flext_observability"]
force-single-line = false
split-on-trailing-comma = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# MyPy configuration - focused on src/ and tests/
[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

# Paths to check
files = ["src", "tests"]

# Import discovery
namespace_packages = true
explicit_package_bases = true

# Error output
show_error_codes = true
show_column_numbers = true
show_error_context = true
pretty = true

# Disable specific checks for tests
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

# External library stubs
[[tool.mypy.overrides]]
module = [
    "singer_sdk.*",
    "oracledb.*",
    "requests.*",
    "sqlalchemy.*",
    "jsonschema.*",
    "tenacity.*",
]
ignore_missing_imports = true

# Coverage configuration
[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
show_missing = true
precision = 2

[tool.coverage.html]
directory = "htmlcov"
