[build-system]
requires = [ "poetry-core>=1.9.0",]
build-backend = "poetry.core.masonry.api"

[project]
name = "flext-target-oracle-oic"
version = "0.9.0"
description = "FLEXT Target Oracle OIC - Singer Target for Oracle Integration Cloud"
readme = "README.md"
requires-python = ">=3.13,<3.14"
keywords = [ "flext", "enterprise", "", "typed", "singer", "target", "data-loading", "etl",]
classifiers = [ "Development Status :: 5 - Production/Stable", "Intended Audience :: Developers", "License :: OSI Approved :: MIT License", "Operating System :: OS Independent", "Programming Language :: Python :: 3.13", "Programming Language :: Python :: 3 :: Only", "Topic :: Software Development :: Libraries :: Python Modules", "Typing :: Typed", "Topic :: Database", "Topic :: System :: Archiving",]
dependencies = [ "pydantic>=2.11.7", "pydantic-settings>=2.10.1", "requests>=2.31.0",]
[[project.authors]]
name = "FLEXT Team"
email = "team@flext.sh"

[[project.maintainers]]
name = "FLEXT Team"
email = "team@flext.sh"

[project.license]
text = "MIT"

[project.urls]
Homepage = "https://github.com/flext-sh/flext"
Repository = "https://github.com/flext-sh/flext"
Documentation = "https://github.com/flext-sh/flext/blob/main/README.md"

[project.scripts]
target-oracle-oic = "flext_target_oracle_oic.target:main"
flext-target-oracle-oic = "flext_target_oracle_oic.target:main"

[tool.ruff]
extend = "../ruff-shared.toml"

[tool.bandit]
exclude_dirs = [ "tests", "build", "dist",]
skips = [ "B101", "B601",]

[tool.poetry]
[[tool.poetry.packages]]
include = "flext_target_oracle_oic"
from = "src"

[tool.deptry]
known_first_party = [ "flext_target_oracle_oic",]

[tool.pyrefly]
python-version = "3.13"
search-path = [ "scripts", "src", "tests",]

[tool.poetry.dependencies]
python = ">=3.13,<3.14"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [ "-ra", "--strict-markers", "--strict-config", "--cov=flext_target_oracle_oic", "--cov-branch", "--cov-report=term-missing:skip-covered", "--cov-report=html:reports/coverage", "--cov-report=xml:reports/coverage.xml", "--cov-fail-under=90", "--maxfail=1", "--tb=short",]
testpaths = [ "tests",]
markers = [ "unit: Unit tests", "integration: Integration tests", "slow: Slow tests", "smoke: Smoke tests", "e2e: End-to-end tests",]

[tool.coverage.run]
source = [ "src",]
branch = true
omit = [ "*/tests/*", "*/test_*", "*/__pycache__/*", "*/venv/*", "*/.venv/*",]

[tool.coverage.report]
exclude_lines = [ "pragma: no cover", "def __repr__", "if self.debug:", "if settings.DEBUG", "raise AssertionError", "raise NotImplementedError", "if 0:", "if __name__ == .__main__.:", "class .*\\bProtocol\\):", "@(abc\\.)?abstractmethod",]

[tool.coverage.html]
directory = "reports/coverage"

[tool.coverage.xml]
output = "reports/coverage.xml"

[tool.ruff.lint.isort]
known-first-party = [ "flext_target_oracle_oic",]

[tool.poetry.dependencies.flext-core]
path = "../flext-core"
develop = true

[tool.poetry.dependencies.flext-meltano]
path = "../flext-meltano"
develop = true

[tool.poetry.dependencies.flext-oracle-oic-ext]
path = "../flext-oracle-oic-ext"
develop = true

[tool.poetry.dependencies.flext-observability]
path = "../flext-observability"
develop = true

[tool.poetry.group.dev.dependencies]
ruff = ">=0.12.3"
black = ">=25.1.0"
isort = ">=6.0.1"
pylint = ">=3.3.0"
pre-commit = ">=4.0.1"
vulture = ">=2.13"
radon = ">=6.0.1"
codespell = ">=2.3.0"
pyupgrade = ">=3.19.0"
autoflake = ">=2.3.1"
detect-secrets = ">=1.5.0"
commitizen = ">=4.8.3"
pyrefly = "^0.34.0"

[tool.poetry.group.test.dependencies]
pytest = ">=8.4.0"
pytest-cov = ">=6.2.0"
pytest-xdist = ">=3.8.0"
pytest-mock = ">=3.14.0"
pytest-timeout = ">=2.4.0"
pytest-benchmark = ">=5.1.0"
pytest-randomly = ">=3.16.0"
pytest-sugar = ">=1.0.0"
pytest-clarity = ">=1.0.1"
pytest-deadfixtures = ">=2.2.1"
pytest-env = ">=1.1.5"
hypothesis = ">=6.125.0"
factory-boy = ">=3.3.1"
faker = ">=37.4.0"

[tool.poetry.group.typings.dependencies]
types-python-dateutil = ">=2.9.0"
types-pyyaml = ">=6.0.12"
types-setuptools = ">=80.9.0"
types-toml = ">=0.10.8.20240310"
types-requests = ">=2.32.4"
types-redis = ">=4.6.0"
types-psutil = ">=7.0.0"

[tool.poetry.group.security.dependencies]
bandit = ">=1.8.0"
pip-audit = ">=2.7.3"
