[tool.poetry]
name = "flx-oracle-oic"
version = "0.1.0"
description = "FLX unified CLI for Oracle Integration Cloud with TAP, Target, Extension, and Adapter functionality"
authors = ["PyAuto Team"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/pyauto/flx-oracle-oic"
keywords = [
    "flx",
    "oracle",
    "oic",
    "integration",
    "singer",
    "meltano",
    "adapter",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]

[tool.poetry.dependencies]
python = "^3.9,<4.0"
singer-sdk = "^0.39.0"
meltano-edk = "^0.9.0"
httpx = "^0.27.0"
pydantic = "^2.11"
backoff = "^2.2.1"
click = "^8.1.0"
rich = "^13.7.0"
typer = "^0.12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
mypy = "^1.13.0"
ruff = "^0.8.6"
black = "^24.10.0"
isort = "^5.13.2"
pre-commit = "^4.0.0"
types-requests = "^2.32.0"
bandit = "^1.7.0"
safety = "^3.2.0"
sphinx = "^7.1.0"

[tool.poetry.scripts]
flx-oracle-oic = "flx_oracle_oic.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# Strict PEP8 Configuration
[tool.ruff]
line-length = 88
target-version = "py312"
fix = true

[tool.ruff.lint]
ignore = [
    "N818",   # Allow Exceptions to have suffix 'Exception' rather than 'Error'
    "S310",   # Allow `urllib.open`
    "S603",   # Allow `subprocess.run(..., shell=False)`
    "COM812", # Handled by the Ruff formatter
    "ISC001", # Handled by the Ruff formatter
]
select = [
    "A",     # flake8-builtins
    "ANN",   # flake8-annotations
    "ARG",   # flake8-unused-arguments
    "ASYNC", # flake8-async
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "COM",   # flake8-commas
    "D",     # pydocstyle/flake8-docstrings
    "DTZ",   # flake8-datetimez
    "E",     # pycodestyle (error)
    "EM",    # flake8-errmsg
    "ERA",   # flake8-eradicate
    "F",     # pyflakes
    "FBT",   # flake8-boolean-trap
    "G",     # flake8-logging-format
    "I",     # isort
    "ICN",   # flake8-import-conventions
    "INP",   # flake8-no-pep420
    "ISC",   # flake8-implicit-str-concat
    "N",     # pep8-naming
    "PERF",  # Perflint
    "PGH",   # pygrep-hooks
    "PIE",   # flake8-pie
    "PT",    # flake8-pytest-style
    "PTH",   # flake8-use-pathlib
    "Q",     # flake8-quotes
    "RET",   # flake8-return
    "RSE",   # flake8-raise
    "RUF",   # Ruff specific rules
    "S",     # flake8-bandit
    "SIM",   # flake8-simplify
    "T10",   # flake8-debugger
    "T20",   # flake8-print
    "TC",    # flake8-type-checking
    "TID",   # flake8-tidy-imports
    "UP",    # pyupgrade
    "W",     # pycodestyle (warning)
    "YTT",   # flake8-2020
]
unfixable = [
    "ERA001", # Don't remove commented-out code
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
strict = true
warn_return_any = true
warn_unused_configs = true
no_implicit_reexport = true

[tool.black]
line-length = 88
target-version = ["py312"]
skip-string-normalization = false
skip-magic-trailing-comma = false

[tool.isort]
profile = "black"
line_length = 88
target-version = ["py312"]
force_sort_within_sections = true
known_first_party = ["flx_oracle_oic"]
known_third_party = [
    "singer_sdk",
    "meltano_edk",
    "httpx",
    "pydantic",
    "click",
    "rich",
    "typer",
]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101", "B601"]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
]
