[build-system]
requires = [ "poetry-core>=1.0.0",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "flx-oracle-oic"
version = "0.1.0"
description = "FLX unified CLI for Oracle Integration Cloud with TAP, Target, Extension, and Adapter functionality"
authors = [ "PyAuto Team",]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/pyauto/flx-oracle-oic"
keywords = [ "flx", "oracle", "oic", "integration", "singer", "meltano", "adapter",]
classifiers = [ "Development Status :: 3 - Alpha", "Intended Audience :: Developers", "License :: OSI Approved :: Apache Software License", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3.13",]

[tool.ruff]
line-length = 88
target-version = "py312"
fix = true

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = false
strict = true
warn_return_any = true
warn_unused_configs = true
no_implicit_reexport = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
show_error_codes = true
show_error_context = true
pretty = true
[[tool.mypy.overrides]]
module = [ "ldif.*", "singer.*", "meltano.*",]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [ "tests.*", "conftest",]
ignore_errors = false
disallow_untyped_defs = false

[tool.black]
line-length = 88
target-version = [ "py312",]
skip-string-normalization = false
skip-magic-trailing-comma = false

[tool.isort]
profile = "black"
line_length = 88
target-version = [ "py312",]
force_sort_within_sections = true
known_first_party = [ "flx_oracle_oic",]
known_third_party = [ "singer_sdk", "meltano_edk", "httpx", "pydantic", "click", "rich", "typer",]
sections = [ "FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER",]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.bandit]
exclude_dirs = [ "tests",]
skips = [ "B101", "B601",]

[tool.poetry.dependencies]
python = "^3.9,<4.0"
singer-sdk = "^0.47.0"
meltano-edk = "^0.5.0"
httpx = "^0.27.0"
pydantic = "^2.11"
backoff = "^2.2.1"
click = "^8.1.0"
rich = "^13.7.0"
typer = "^0.12.0"
typing-extensions = "^4.12.0"

[tool.poetry.scripts]
flx-oracle-oic = "flx_oracle_oic.main:main"

[tool.ruff.lint]
ignore = [ "N818", "S310", "S603", "COM812", "ISC001",]
select = [ "A", "ANN", "ARG", "ASYNC", "B", "C4", "COM", "D", "DTZ", "E", "EM", "ERA", "F", "FBT", "G", "I", "ICN", "INP", "ISC", "N", "PERF", "PGH", "PIE", "PT", "PTH", "Q", "RET", "RSE", "RUF", "S", "SIM", "T10", "T20", "TC", "TID", "UP", "W", "YTT",]
unfixable = [ "ERA001",]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.coverage.run]
source = [ "src",]
omit = [ "*/tests/*",]

[tool.coverage.report]
exclude_lines = [ "pragma: no cover", "def __repr__", "if self.debug:", "if settings.DEBUG", "raise AssertionError", "raise NotImplementedError", "if 0:", "if __name__ == .__main__.:",]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
mypy = "^1.16.0"
ruff = "^0.8.6"
black = "^24.10.0"
isort = "^5.13.2"
pre-commit = "^4.0.0"
types-requests = "^2.32.0.20241016"
bandit = "^1.7.0"
safety = "^3.2.0"
sphinx = "^7.1.0"
types-python-dateutil = "^2.9.0.20241206"
types-pyyaml = "^6.0.12.20250516"
types-setuptools = "^75.7.0.20250106"
# types-sqlalchemy REMOVED - SQLAlchemy 2.0+ has built-in types
# types-asyncio REMOVED - asyncio is part of Python stdlib, no stubs needed
types-aiofiles = "^24.1.0.20241114"
